devops/allure/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allure
  namespace: allure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: allure
  template:
    metadata:
      labels:
        app: allure
    spec:
      containers:
      - name: allure
        image: frankescobar/allure-docker-service:2.27.0-arm64v8
        ports:
        - containerPort: 5050
        volumeMounts:
        - name: allure-results
          mountPath: /app/allure-results
        - name: allure-reports
          mountPath: /app/reports
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
      volumes:
      - name: allure-results
        persistentVolumeClaim:
          claimName: allure-results-pvc
      - name: allure-reports
        emptyDir: {}
