devops/allure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: allure
  namespace: allure
spec:
  selector:
    app: allure
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
  type: ClusterIP
